--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,10 @@
 # Gemini API Key from Google AI Studio
 GEMINI_API_KEY=your_gemini_api_key_here
 OPENROUTER_KEY=your_openrouter_api_key_here
+
+# Discord Webhook URL for notifications
+DISCORD_WEBHOOK_URL=https://discord.com/api/webhooks/YOUR_WEBHOOK_ID/YOUR_WEBHOOK_TOKEN
+
+# API Authentication (optional - for production use)
+API_USERNAME=admin
+API_PASSWORD=your_secure_password_here
