added an email for the ai and full github accoutn and capabilities

--- a/.env.example
+++ b/.env.example
@@ -2,10 +2,32 @@ GEMINI_API_KEY=
 OPENROUTER_KEY=
 
 DISCORD_WEBHOOK_URL=
+DISCORD_LOG_URL=
 
 API_USERNAME=admin
 API_PASSWORD=your_secure_password_here
 
 BRAVE_BROWSER_API_KEY=
 
-SANDBOX_PATH =./sandbox
+SANDBOX_PATH=./sandbox
+
+# Email Configuration (Phase 2)
+AI_EMAIL_ADDRESS=
+AI_EMAIL_PASSWORD=
+SMTP_SERVER=mail.planethoster.net
+SMTP_PORT=587
+IMAP_SERVER=mail.planethoster.net
+IMAP_PORT=993
+EMAIL_ENABLED=false
+EMAIL_RATE_LIMIT=10
+ALLOWED_EMAIL_DOMAINS=gmail.com,example.com
+
+# GitHub Configuration (Phase 3-5) - Multi-Repository Support
+# The AI can work on multiple Git repositories in different sandbox folders
+GITHUB_USERNAME=
+GITHUB_TOKEN=
+SSH_KEY_PATH=./ssh/ai_github_key
+GIT_USER_NAME=AI Bot
+GIT_USER_EMAIL=
+GIT_ENABLED=false
+REQUIRE_COMMIT_MESSAGE_FORMAT=true
