Moved config var in .env

--- a/.env.example
+++ b/.env.example
@@ -1,5 +1,15 @@
+# LLM Configuration
+LLM_PROVIDER=gemini
 GEMINI_API_KEY=
+GEMINI_MODEL=gemini-2.5-flash
 OPENROUTER_KEY=
+OPENROUTER_MODEL=deepseek/deepseek-v3.2
+OLLAMA_URL=http://localhost:11434
+AI_MODEL=gemma3:4b
+
+# Voice Configuration
+XVASYNTH_PATH=./Content/xVAsynth
+VOICE_MODEL=f4_robot_assaultron
 
 DISCORD_WEBHOOK_URL=
 DISCORD_LOG_URL=
@@ -14,9 +24,9 @@ SANDBOX_PATH=./sandbox
 # Email Configuration (Phase 2)
 AI_EMAIL_ADDRESS=
 AI_EMAIL_PASSWORD=
-SMTP_SERVER=mail.planethoster.net
+SMTP_SERVER=
 SMTP_PORT=587
-IMAP_SERVER=mail.planethoster.net
+IMAP_SERVER=
 IMAP_PORT=993
 EMAIL_ENABLED=false
 EMAIL_RATE_LIMIT=10
