better email manager

--- a/.env.example
+++ b/.env.example
@@ -31,6 +31,8 @@ IMAP_PORT=993
 EMAIL_ENABLED=false
 EMAIL_RATE_LIMIT=10
 ALLOWED_EMAIL_DOMAINS=gmail.com,example.com
+EMAIL_SIGNATURE_ENABLED=true
+AI_NAME=ASR-7
 
 # GitHub Configuration (Phase 3-5) - Multi-Repository Support
 # The AI can work on multiple Git repositories in different sandbox folders
