--- a/.env.example
+++ b/.env.example
@@ -14,6 +14,11 @@ VOICE_MODEL=f4_robot_assaultron
 DISCORD_WEBHOOK_URL=
 DISCORD_LOG_URL=
 
+# Discord Bot Configuration
+DISCORD_BOT_TOKEN=your_discord_bot_token_here
+DISCORD_CLIENT_ID=your_discord_client_id_here
+DISCORD_GUILD_ID=your_discord_guild_id_here
+
 API_USERNAME=admin
 API_PASSWORD=your_secure_password_here
 
