added monitoring services + dashboard + togglable in run.py  and added discord bot to run.py too

--- a/.env.example
+++ b/.env.example
@@ -26,7 +26,7 @@ BRAVE_BROWSER_API_KEY=
 
 SANDBOX_PATH=./sandbox
 
-# Email Configuration (Phase 2)
+# Email Configuration
 AI_EMAIL_ADDRESS=
 AI_EMAIL_PASSWORD=
 SMTP_SERVER=
@@ -39,8 +39,7 @@ ALLOWED_EMAIL_DOMAINS=gmail.com,example.com
 EMAIL_SIGNATURE_ENABLED=true
 AI_NAME=ASR-7
 
-# GitHub Configuration (Phase 3-5) - Multi-Repository Support
-# The AI can work on multiple Git repositories in different sandbox folders
+# GitHub Configuration
 GITHUB_USERNAME=
 GITHUB_TOKEN=
 SSH_KEY_PATH=./ssh/ai_github_key
