Added full on STT so i can also talk to the AI, using Voxtral model from Mistral AI

--- a/.env.example
+++ b/.env.example
@@ -6,10 +6,15 @@ OPENROUTER_KEY=
 OPENROUTER_MODEL=deepseek/deepseek-v3.2
 OLLAMA_URL=http://localhost:11434
 AI_MODEL=gemma3:4b
+MISTRAL_KEY=mistral_api_key_here
 
 # Voice Configuration
 XVASYNTH_PATH=./Content/xVAsynth
 VOICE_MODEL=f4_robot_assaultron
+
+# Speech-to-Text Configuration (Mistral Voxtral)
+STT_SAMPLE_RATE=16000
+STT_CHUNK_DURATION_MS=480
 
 DISCORD_WEBHOOK_URL=
 DISCORD_LOG_URL=
