--- a/requirements.txt
+++ b/requirements.txt
@@ -10,3 +10,7 @@ python-dotenv>=1.0.0
 # Security & Monitoring
 flask-httpauth>=4.8.0
 flask-limiter>=3.5.0
+
+# Speech-to-Text
+mistralai[realtime]>=1.0.0
+pyaudio>=0.2.14
