Cleaned file and reorganized them to prepare for opensourcing

--- a/.env.example
+++ b/.env.example
@@ -29,7 +29,7 @@ API_PASSWORD=your_secure_password_here
 
 BRAVE_BROWSER_API_KEY=
 
-SANDBOX_PATH=./sandbox
+SANDBOX_PATH=./src/sandbox
 
 # Email Configuration
 AI_EMAIL_ADDRESS=
