More voice optimization and persistant settings, Translated agent phrase

--- a/.gitignore
+++ b/.gitignore
@@ -212,11 +212,7 @@ Content/xVAsynth.zip
 Content/efficientdet_lite0.tflite
 
 # AI data (runtime generated)
-ai-data/audio_output/
-ai-data/memories.json
-ai-data/conversation_history.json
-ai-data/mood_state.json
-ai-data/chat_images/
+ai-data/
 
 # Source code sandbox
 src/sandbox/
