--- a/.env.example
+++ b/.env.example
@@ -1,11 +1,9 @@
 # LLM Configuration
+# Provider: "ollama", "gemini", or "openrouter" (can be changed in web UI)
 LLM_PROVIDER=gemini
 GEMINI_API_KEY=
-GEMINI_MODEL=gemini-2.5-flash
 OPENROUTER_KEY=
-OPENROUTER_MODEL=deepseek/deepseek-v3.2
 OLLAMA_URL=http://localhost:11434
-AI_MODEL=gemma3:4b
 MISTRAL_KEY=mistral_api_key_here
 
 # Voice Configuration
